@@ -1,19 +1,19 @@
-.TH SG_MODES "8" "February 2007" "sg3_utils\-1.24" SG3_UTILS
+.TH SG_MODES "8" "January 2008" "sg3_utils\-1.26" SG3_UTILS
 .SH NAME
 sg_modes \- reads mode pages with SCSI MODE SENSE command
 .SH SYNOPSIS
 .B sg_modes
 [\fI\-\-all\fR] [\fI\-\-control=PC\fR] [\fI\-\-dbd\fR] [\fI\-\-dbout\fR]
 [\fI\-\-examine\fR] [\fI\-\-flexible\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR]
-[\fI\-\-list\fR] [\fI\-\-llbaa\fR] [\fI\-\-page=PG[,SPG]\fR]
-[\fI\-\-raw\fR] [\fI\-R\fR] [\fI\-\-six\fR] [\fI\-\-verbose\fR]
-[\fI\-\-version\fR] [\fIDEVICE\fR]
+[\fI\-\-list\fR] [\fI\-\-llbaa\fR] [\fI\-\-maxlen=LEN\fR]
+[\fI\-\-page=PG[,SPG]\fR] [\fI\-\-raw\fR] [\fI\-R\fR] [\fI\-\-six\fR]
+[\fI\-\-verbose\fR] [\fI\-\-version\fR] [\fIDEVICE\fR]
 .PP
 .B sg_modes
 [\fI\-6\fR] [\fI\-a\fR] [\fI\-A\fR] [\fI\-c=PC\fR] [\fI\-d\fR] [\fI\-D\fR]
 [\fI\-e\fR] [\fI\-f\fR] [\fI\-h\fR] [\fI\-H\fR] [\fI\-l\fR] [\fI\-L\fR]
-[\fI\-p=PG[,SPG]\fR] [\fI\-r\fR] [\fI\-subp=SPG\fR] [\fI\-v\fR] [\fI\-V\fR]
-[\fI\-?\fR] [\fIDEVICE\fR]
+[\fI\-m=LEN\fR] [\fI\-p=PG[,SPG]\fR] [\fI\-r\fR] [\fI\-subp=SPG\fR]
+[\fI\-v\fR] [\fI\-V\fR] [\fI\-?\fR] [\fIDEVICE\fR]
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
@@ -119,6 +119,14 @@ may respond with 16 byte block descriptors as indicated by
 the 'LongLBA' field in the response. In most cases setting this option
 is not needed.
 .TP
+\fB\-m\fR, \fB\-\-maxlen\fR=\fILEN\fR
+The \fILEN\fR argument is the maximum response length in bytes. It is
+the 'allocation length' field in the cdb. When not given (or \fILEN\fR is
+zero) then the allocation length field is set to 4096 for MODE SENSE (10)
+or 252 for MODE SENSE (6). The \fILEN\fR argument must be non-negative
+and no greater than 65535 for MODE SENSE (10) and not greater than 255
+for MODE SENSE (6).
+.TP
 \fB\-O\fR, \fB\-\-old\fR
 switch to older style options.
 .TP
@@ -222,6 +230,9 @@ see \fB\-\-llbaa\fR in the main description.
 \fB\-N\fR
 switch to the newer style options.
 .TP
+\fB\-m\fR=\fILEN\fR
+see \fB\-\-maxlen\fR=\fILEN\fR in the main description.
+.TP
 \fB\-p\fR=\fIPG\fR
 \fIPG\fR is page code to fetch. Should be a hexadecimal number between 0
 and 3f inclusive (0 to 63 decimal). The default value when required is
@@ -255,7 +266,7 @@ Written by Doug Gilbert
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2000\-2007 Douglas Gilbert
+Copyright \(co 2000\-2008 Douglas Gilbert
 .br
 This software is distributed under the GPL version 2. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
